cmake_minimum_required(VERSION 3.15)
project(Music__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Music__ main.cpp EDD/ListaDoble.h EDD/NodoOrtogonal.h EDD/CuboOrtogonal.h EDD/ArbolBinario/NodoBinario.cpp EDD/ArbolBinario/NodoBinario.h EDD/ArbolBinario/ABB.cpp EDD/ArbolBinario/ABB.h EDD/Listas/ListaCanciones/NodoListaSimple.h EDD/Listas/ListaCanciones/ListaSimple.h EDD/Listas/ListaPalabras/NodoPalabras.h EDD/Listas/ListaPalabras/ListaPalabras.h EDD/Listas/Pila_Cola_Circular/Nodo.h EDD/Listas/Pila_Cola_Circular/Lista.h EDD/Listas/ListaTop/NodoTop.h EDD/Listas/ListaTop/ListaTop.h)